# eventwork_template

./: Cargo.toml
net/: Cargo.toml
net/src/: lib.rs  shared.rs  to_client.rs  to_server.rs
server/: Cargo.toml
server/src/: main.rs  states.rs
server/src/states/: common.rs  lobby.rs
src/: main.rs  states.rs
src/states/: common.rs  connecting.rs  not_connected.rs  ready_up.rs
