[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"]}
uuid = {version = "*", features = ["serde", "v5"]}
typetag = "0.1.8"
bevy_eventwork = "0.6.2"
bevy = "0.6"